# External_Sorting

./: CMakeLists.txt  README.md
Resources/: ui_main.ui
source/: main.cpp  read_inp_outp.cpp
source/app/: config.cpp  config.h  memory_detect.cpp  memory_detect.h
source/base/: binary_stream_writer.h  external_sort.cpp  external_sort.h
source/gui/: main_window.cpp  main_window.h  mainwindow.ui  mainwindow.ui.autosave  resources.qrc
source/gui/animation/: animation.cpp  animation_clock.h  animation_controller.cpp  animation_controller.h  animation_manager.h  animation_step.h  animation_timer.h  data_block.cpp  data_block.h  sort_step.h  step_aggregator.h
source/gui/style/: css.qss
source/gui/visualization/: external_sort_canvas.cpp  external_sort_canvas.h  fullscreen_visualizer.h  memory_block.h  moving_block.h  sort_visualizer.cpp  sort_visualizer.h
source/gui/widgets/: disk_io_animator.cpp  disk_io_animator.h  merge_heap_widget.cpp  merge_heap_widget.h  timeline_scrubber.cpp  timeline_scrubber.h
